fixed alignment for mobile views

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -67,12 +67,16 @@
 		.url {
 			
 		}
+		.post-user {
+			padding-left: 50px;
+		}
 	
 		.comment-count {
 			font-size: .8em;
 			font-weight: 700;
 			line-height: 2em;
 			color: #7f8c8d;
+			padding-left: 50px;
 		}	
 		.comment-count a {
 			color: #7f8c8d;
